[gd_scene load_steps=4 format=3 uid="uid://2nsmxvyq5vdk"]

[ext_resource type="Script" path="res://main_game.gd" id="1_qjsbs"]
[ext_resource type="PackedScene" uid="uid://duy4nowlo27ga" path="res://arena.tscn" id="2_y7fkq"]
[ext_resource type="PackedScene" uid="uid://bsr021glkhxt" path="res://hud.tscn" id="4_pxw73"]

[node name="Main Game" type="Node"]
script = ExtResource("1_qjsbs")

[node name="LightManaTimer" type="Timer" parent="."]

[node name="Arena" parent="." instance=ExtResource("2_y7fkq")]

[node name="HUD" parent="." instance=ExtResource("4_pxw73")]

[connection signal="light_mana_changed" from="." to="HUD" method="_on_light_mana_changed"]
[connection signal="timeout" from="LightManaTimer" to="." method="_on_light_mana_timer_timeout"]
